workloads/pihole/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: media
  labels:
    app: pihole
spec:
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: docker.io/pihole/pihole:2022.01
        imagePullPolicy: IfNotPresent
        ports:
        - name: dns-tcp
          containerPort: 53
          protocol: TCP
        - name: dns-udp
          containerPort: 53
          protocol: UDP
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: pihole-config
          mountPath: "/etc/pihole"
        - name: pihole-dnsmasq-config
          mountPath: "/etc/dnsmasq.d"
      volumes:
      - name: pihole-config
        persistentVolumeClaim:
          claimName: pvc-nfs-client-provisioner-pihole-config
      - name: pihole-dnsmasq-config
        persistentVolumeClaim:
          claimName: pvc-nfs-client-provisioner-pihole-dnsmasq-config
