workloads/pihole/dns-tcp-load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp-load-balancer-service
  namespace: media
  annotations:
    metallb.universe.tf/allow-shared-ip: k3os
spec:
  type: LoadBalancer
  ports:
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  selector:
    app: pihole
  loadBalancerIP: 172.16.20.17
