workloads/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - pihole.toothyshouse.com
  rules:
  - host: pihole.toothyshouse.com
    http:
      paths:
      - path: /
        backend:
          serviceName: pihole-service
          servicePort: 80
